--- a/src/style/base.less
+++ b/src/style/base.less
@@ -1,4 +1,16 @@
- 
+ @font-face {
+  font-family: 'iconfont';
+  src: url('./icon/iconfont.woff2') format('woff2'),
+       url('./icon/iconfont.woff') format('woff'),
+       url('./icon/iconfont.ttf') format('truetype');
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .full {
     position: absolute;
     left: 0;
