--- a/src/style/edit.less
+++ b/src/style/edit.less
@@ -73,6 +73,7 @@
         .full;
         z-index: 10;
         cursor: pointer;
+        border: 2px solid #11a3f1;
     }
     .edit-viewer{
         position: absolute;
@@ -110,7 +111,17 @@
         position: absolute;
         background: #ededed;
     }
-    
+    .conf-plane {
+        position: absolute;
+        right: 0;
+        width: 300px;
+        top: 0;
+        bottom: @n-h;
+        border-left: 2px solid #aaa;
+        z-index: 10;
+        background: #fff;
+        transition: all .2s;
+    }
 }
 
 
